@@ -1,3 +1,8 @@
+2004-03-21  Marcus Brinkmann  <marcus@gnu.org>
+
+	* slab.h (hurd_slab_destroy): New prototype.
+	* slab.c (hurd_slab_destroy): Dummy implementation.
+
 2003-10-11  Marcus Brinkmann  <marcus@gnu.org>
 
 	* slab.h (hurd_slab_constructor_t): Add new HOOK argument.
